--- a/.deploy/naiserator.yaml
+++ b/.deploy/naiserator.yaml
@@ -34,6 +34,8 @@ spec:
     {{#each ingresses as |url|}}
     - {{url}}
     {{/each}}
+  vault:
+    enabled: true
   env:
     {{#each env}}
     - name: {{@key}}
