--- a/src/main/resources/application-dev-fss.yml
+++ b/src/main/resources/application-dev-fss.yml
@@ -6,6 +6,11 @@ no.nav:
           fpsoknad-mottak:
             token-exchange:
               audience: dev-fss:teamforeldrepenger:fpsoknad-mottak
+historikk:
+  dittnav:
+    base-uri: https://foreldrepenger.dev.nav.no
+  tilbakekreving:
+    topic: privat-tilbakekreving-brukerdialog-q1
 management:
   endpoints:
     web:
@@ -14,12 +19,6 @@ management:
   endpoint:
     health:
       show-details: always
-historikk:
-  dittnav:
-    enabled: true
-  tilbakekreving:
-    enabled: true
-    topic: privat-tilbakekreving-brukerdialog-q1
 spring:
   datasource:
     url: jdbc:postgresql://b27dbvl007.preprod.local:5432/fpinfo-historikk-preprod
