--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -4,30 +4,38 @@ on:
   pull_request:
     branches:
       - master
+    paths-ignore:
+      - '**.md'
+      - '**.MD'
+      - '.gitignore'
+      - '.github/workflows/build.yml'
+      - '.github/workflows/promote.yml'
+      - '.github/workflows/dispatch.yml'
+      - '.github/workflows/codeql-analysis.yml'
+      - '.github/dependabot.yml'
+
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   kompiler:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Sett opp Java 17
-        uses: actions/setup-java@v2
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-java@v3
         with:
           java-version: 17
           distribution: 'temurin'
           cache: 'maven'
 
-      - name: Kompiler med sonar analyse
+      - name: Bygger og tester
+        run: |
+          mvn install -e --batch-mode --settings .github/.m2/settings.xml
+      - name: Sonar analyse
         if: github.actor != 'dependabot[bot]'
         run: |
-          mvn jacoco:prepare-agent verify jacoco:report sonar:sonar -e --batch-mode --settings .github/.m2/settings.xml -Dsonar.login=${SONAR_TOKEN}
+          mvn jacoco:report org.sonarsource.scanner.maven:sonar-maven-plugin:sonar --settings .github/.m2/settings.xml
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Hvis repo blir avhengig av private biblioteker trengs en PAT.
-
-      - name: Kompiler uten sonar analyse
-        if: github.actor == 'dependabot[bot]'
-        run: |
-          mvn verify -e --batch-mode --settings .github/.m2/settings.xml
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Hvis repo blir avhengig av private biblioteker trengs en PAT.
