--- a/src/main/resources/application-dev-fss.yml
+++ b/src/main/resources/application-dev-fss.yml
@@ -19,6 +19,7 @@ management:
   endpoint:
     health:
       show-details: always
+spring:
   datasource:
     url: jdbc:postgresql://b27dbvl007.preprod.local:5432/fpinfo-historikk-preprod
   mvc:
