Fix typo (restart pod når db feiler)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -59,7 +59,7 @@ management:
   endpoint:
     health:
       group:
-        liveiness:
+        liveness:
           include: db
       show-details: never
 server:
