--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -21,6 +21,7 @@ spring:
       enabled: false
       database:
         role: fpinfohistorikk
+        enabled: false
   datasource:
     url: jdbc:postgresql://postgres:5432/fpinfohistorikk
     hikari:
@@ -41,8 +42,10 @@ spring:
     log-request-details: true
 kafka:
   onprem:
-    bootstrap-servers: localhost:9093
-    transactional-id-prefix: local
+    bootstrap-servers: localhost:9092
+    auto-offset-reset: earliest
+  aiven:
+    bootstrap-servers: localhost:9092
 
 no.nav:
   security:
@@ -72,14 +75,14 @@ no.nav:
 
 historikk:
   dittnav:
-    enabled: false
+    enabled: true
   inntektsmelding:
     enabled: false
   oppslag:
     enabled: false
   innsending:
     søknad:
-      enabled: false
+      enabled: true
     fordeling:
       enabled: false
   tilbakekreving:
