--- a/src/main/resources/application-dev-fss.yml
+++ b/src/main/resources/application-dev-fss.yml
@@ -19,6 +19,10 @@ management:
   endpoint:
     health:
       show-details: always
+vault:
+  database-backend: postgresql/preprod-fss
+  database-role: fpinfo-historikk-preprod-user
+  database-admin-role: fpinfo-historikk-preprod-admin
 spring:
   datasource:
     url: jdbc:postgresql://b27dbvl007.preprod.local:5432/fpinfo-historikk-preprod
