--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -66,6 +66,8 @@ server:
   servlet:
     context-path: /api
   forward-headers-strategy: framework
+vault:
+  enabled: true
 spring:
   application:
     name: fpinfo-historikk
