Bruk auto-offset-reset none

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -116,7 +116,7 @@ kafka:
     security-protocol-config: SASL_SSL
     jaas-config: org.apache.kafka.common.security.plain.PlainLoginModule required username=${system.username} password=${system.password};
     bootstrap-servers: a01apvl00145.adeo.no:8443,a01apvl00146.adeo.no:8443,a01apvl00147.adeo.no:8443
-    auto-offset-reset: earliest
+    auto-offset-reset: none
 springdoc:
   packages-to-scan: no.nav.foreldrepenger.historikk
   swagger-ui:
