Legger til støtte for å kjøre fpinfo-historikk i pipeline med api og selvbetjening

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -85,5 +85,6 @@ historikk:
   innsending:
     søknad:
       enabled: true
+      topic: fpsoknad-mottak-innsendinghendelse
   tilbakekreving:
     enabled: false
