TEST: property for baseurl for fpsoknad-mottak i test ertattes til fpsoknad-mottak.override.url

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -60,7 +60,7 @@ historikk:
   inntektsmelding:
     enabled: false
   oppslag:
-    base-uri: ${fpsoknad.mottak.url}
+    base-uri: ${fpsoknad-mottak.override.url}
   innsending:
     søknad:
       enabled: true
