--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 no.nav:
   security:
     jwt:
-      dont-propagate-bearertoken: true
+      dont-propagate-bearertoken: false
       client:
         registration:
           fpsoknad-mottak:
