--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         <boot-conditionals.version>3.1.0</boot-conditionals.version>
         <token-validation-version>2.1.4</token-validation-version>
         <confluent.version>7.2.1</confluent.version>
-        <springdoc.version>1.6.11</springdoc.version>
+        <springdoc.version>1.6.12</springdoc.version>
         <spring-cloud.version>2021.0.4</spring-cloud.version>
     </properties>
     <scm>
@@ -173,6 +173,10 @@
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-graphql</artifactId>
         </dependency>
         <dependency>
             <groupId>org.flywaydb</groupId>
