--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <token-validation-version>2.1.4</token-validation-version>
         <confluent.version>7.2.2</confluent.version>
         <springdoc.version>1.6.12</springdoc.version>
+        <swagger-annotations.version>2.2.4</swagger-annotations.version>
         <spring-cloud.version>2021.0.4</spring-cloud.version>
     </properties>
     <scm>
@@ -160,6 +161,11 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>${springdoc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>${swagger-annotations.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
