--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,122 +1,50 @@
 name: Bygg og deploy
-
 on:
   push:
     branches:
-      - master    # Push events on master branch
+      - '**'
     paths-ignore:
       - '**.md'
       - '**.MD'
       - '.gitignore'
-      - '.github/workflows/build-pr.yml'
-      - '.github/workflows/dispatch.yml'
-      - '.github/workflows/codeql-analysis.yml'
-      - '.github/dependabot.yml'
-env:
-  IMAGE_BASE: ghcr.io/${{ github.repository }}
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - '.editorconfig'
+      - '.java-version'
+      - 'LICENCE'
+      - 'CODEOWNERS'
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: 17
-          cache: 'maven'
+  build-app:
+    name: Build
+    uses: navikt/fp-gha-workflows/.github/workflows/build-app-no-db.yml@main
+    with:
+      sonar-scan: true
+      build-image: ${{ github.ref_name == 'master' }} # default: true
+      push-image: ${{ github.ref_name == 'master' }} # default: false
+    secrets: inherit
 
-      - name: Hent tag
-        run: |
-          echo "TAG=$(date +%Y.%m.%d.%H%M%S)-$(echo $GITHUB_SHA | cut -c1-7)" >> $GITHUB_ENV
+  create-issue:
+    name: Issues
+    if: github.ref_name == 'master'
+    needs: build-app
+    uses: navikt/fp-gha-workflows/.github/workflows/issues.yml@main
+    with:
+      build-version: ${{ needs.build-app.outputs.build-version }}
+    secrets: inherit
 
-      - name: Kompiler
-        run: |
-          mvn versions:set -DnewVersion=${TAG}
-          mvn install -e --batch-mode --settings .github/.m2/settings.xml
+  promote:
+    name: Deploy til dev
+    if: github.ref_name == 'master'
+    needs: [ build-app, create-issue ]
+    uses: navikt/fp-gha-workflows/.github/workflows/promote.yml@main
+    with:
+      issue-number: ${{ needs.create-issue.outputs.issue-number }}
+      cluster: dev-fss
+    secrets: inherit
 
-      - name: Login to GitHub Packages Docker Registry
-        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a # Use commit-sha1 instead of tag for security concerns
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Bygg, tag og push Docker image
-        run: |
-          docker build --pull --tag ${IMAGE_BASE}:${TAG} --tag ${IMAGE_BASE}:latest .
-          docker push ${IMAGE_BASE} --all-tags
-
-      - name: Lukk gamle issues
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            github.rest.issues.listForRepo({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              state: 'open',
-              labels: ['deployment']
-            }).then(response => {
-              response.data.forEach(issue => {
-                github.rest.issues.update({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  issue_number: issue.number,
-                  state: 'closed'
-                });
-              });
-            });
-
-      -  name: Opprett deployment issue
-         id: createdeployissue
-         if: success()
-         uses: actions/github-script@v6
-         with:
-           github-token: ${{secrets.GITHUB_TOKEN}}
-           script: |
-             github.rest.issues.create( {
-               owner: context.issue.owner,
-               repo: context.issue.repo,
-               labels: ['deployment'],
-               title: 'Deploy av ${{ env.TAG }}',
-               body: '${{ github.sha }}'})
-             .then(response => {
-                     core.setOutput('number', response.data.number);
-              });
-
-      - uses: navikt/github-app-token-generator@v1
-        id: get-token
-        with:
-          private-key: ${{ secrets.FP_PRIVATE_KEY }}
-          app-id: ${{ secrets.FP_APP_ID }}
-
-      - name: Trigg deploy til dev-fss
-        if: success()
-        run: |
-          curl -XPOST -u "x-access-token:${{ steps.get-token.outputs.token }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          https://api.github.com/repos/${{ github.repository }}/dispatches \
-          -d '{
-                "event_type": "promote-command",
-                "client_payload": {
-                  "github": {
-                      "payload": {
-                          "issue": {
-                              "number": "${{ steps.createdeployissue.outputs.number }}"
-                  }}},
-                  "slash_command": {
-                      "args": {
-                          "unnamed": {
-                              "arg1": "dev-fss"
-                  }}}
-                }'
-
-      - name: Sonar analyse
-        run: |
-          mvn jacoco:report org.sonarsource.scanner.maven:sonar-maven-plugin:sonar --settings .github/.m2/settings.xml
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  snyk:
+    name: Snyk
+    needs: build-app
+    uses: navikt/fp-gha-workflows/.github/workflows/snyk.yml@main
+    with:
+      build-version: ${{ needs.build-app.outputs.build-version }}
+    secrets: inherit
