--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -84,6 +84,7 @@ historikk:
     enabled: false
   saf:
     base-uri: http://localhost:8060/rest/api/saf
+    enabled: false
   innsending:
     søknad:
       enabled: true
