--- a/src/main/resources/application-prod-fss.yml
+++ b/src/main/resources/application-prod-fss.yml
@@ -11,3 +11,28 @@ vault:
   database-backend: postgresql/prod-fss
   database-role: fpinfo-historikk-prod-user
   database-admin-role: fpinfo-historikk-prod-admin
+
+spring:
+  kafka:
+    properties:
+      basic:
+        auth:
+          user:
+            info: ${kafka.schema.registry.user}:${kafka.schema.registry.password}
+          credentials:
+            source: USER_INFO
+      schema:
+        registry:
+          url: ${kafka.schema.registry}
+      endpoint:
+        identification:
+          algorithm: ''
+    security:
+      protocol: SSL
+    ssl:
+      trust-store-location: file:${kafka.truststore.path}
+      trust-store-type: JKS
+      trust-store-password: ${kafka.credstore.password}
+      key-store-location: file:${kafka.keystore.path}
+      key-store-type: PKCS12
+      key-store-password: ${kafka.credstore.password}
