Legger til topic teamforeldrepenger.selvbetjening-innsendinghendelse-v1

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,6 +32,8 @@ historikk:
       enabled: true
       topic: fpsoknad-mottak
       group-id: group_id
+      topic-aiven: teamforeldrepenger.selvbetjening-innsendinghendelse-v1
+      group-id-aiven: fpinfo-historikk-innsending
   tilbakekreving:
     enabled: true
     topic: privat-tilbakekreving-brukerdialog-p
