--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,10 +30,8 @@ historikk:
   innsending:
     søknad:
       enabled: true
-      topic: fpsoknad-mottak
-      group-id: group_id
-      topic-aiven: teamforeldrepenger.selvbetjening-innsendinghendelse-v1
-      group-id-aiven: fpinfo-historikk-innsending
+      topic: teamforeldrepenger.selvbetjening-innsendinghendelse-v1
+      group-id: fpinfo-historikk-innsending
   tilbakekreving:
     enabled: true
     topic: privat-tilbakekreving-brukerdialog-p
