--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -39,6 +39,20 @@ spring:
     enabled: true
   mvc:
     log-request-details: true
+  kafka:
+    bootstrap-servers: ${kafka.brokers}
+    properties:
+      security:
+        protocol: SASL_SSL
+      sasl:
+        mechanism: PLAIN
+        jaas:
+          config: org.apache.kafka.common.security.plain.PlainLoginModule required username=${systembruker.username} password=${systembruker.password};
+    consumer:
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      auto-offset-reset: earliest
+
 kafka:
   onprem:
     jaas-config: org.apache.kafka.common.security.plain.PlainLoginModule required username=${systembruker.username} password=${systembruker.password};
