Legger til inntektsmelding topic

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,9 @@ historikk:
     enabled: true
     topic: privat-foreldrepenger-brukerdialog-inntektsmelding
     group-id: group_id
+  inntektsmelding-aiven:
+    topic: teamforeldrepenger.inntektsmelding-innsendinghendelse-v1
+    group-id: fpinfo-historikk-inntektsmelding
   innsending:
     søknad:
       enabled: true
