--- a/src/main/resources/application-dev-fss.yml
+++ b/src/main/resources/application-dev-fss.yml
@@ -47,13 +47,14 @@ spring:
       key-store-location: file:${kafka.keystore.path}
       key-store-type: PKCS12
       key-store-password: ${kafka.credstore.password}
-    properties:
-      basic:
-        auth:
-          user:
-            info: ${kafka.schema.registry.user}:${kafka.schema.registry.password}
-          credentials:
-            source: USER_INFO
-      schema:
-        registry:
-          url: ${kafka.schema.registry}
+    producer:
+      properties:
+        basic:
+          auth:
+            user:
+              info: ${kafka.schema.registry.user}:${kafka.schema.registry.password}
+            credentials:
+              source: USER_INFO
+        schema:
+          registry:
+            url: ${kafka.schema.registry}
