--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -90,7 +90,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
-    open-in-view: false
+    open-in-view: true
   main:
     banner-mode: 'off'
   kafka:
