--- a/src/main/resources/application-dev-fss.yml
+++ b/src/main/resources/application-dev-fss.yml
@@ -35,6 +35,8 @@ vault:
 spring:
   datasource:
     url: jdbc:postgresql://b27dbvl007.preprod.local:5432/fpinfo-historikk-preprod
+  jpa:
+    open-in-view: false
   mvc:
     log-request-details: true
   kafka:
