Legger til saf vtp config

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -95,7 +95,7 @@ historikk:
     enabled: false
   saf:
     base-uri: http://localhost:8060/rest/api/saf
-    enabled: false
+    enabled: true
   innsending:
     søknad:
       enabled: true
