--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -35,6 +35,7 @@ spring:
     username: fpinfohistorikk
     password: fpinfohistorikk
   jpa:
+    open-in-view: false
     show-sql: false
     properties:
       hibernate: format_sql=true
