Skru på tidslinjetjeneste i produksjon

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,15 @@ no.nav:
               client-id: ${token.x.client.id}
               client-jwk: ${token.x.private.jwk}
               client-auth-method: private_key_jwt
+          safselvbetjening-q1:
+            well-known-url: ${token.x.well.known.url}
+            grant-type: urn:ietf:params:oauth:grant-type:token-exchange
+            token-exchange:
+              audience: prod-fss:teamdokumenthandtering:safselvbetjening
+            authentication:
+              client-id: ${token.x.client.id}
+              client-jwk: ${token.x.private.jwk}
+              client-auth-method: private_key_jwt
       issuer:
         tokenx:
           discovery-url: ${token.x.well.known.url}
@@ -36,6 +45,9 @@ historikk:
     enabled: true
     topic: teamforeldrepenger.tilbakekreving-brukerdialog-v1
     group-id: fpinfo-historikk-tilbakekreving
+  saf:
+    base-uri: https://safselvbetjening.intern.nav.no
+    api-base-uri: https://foreldrepengesoknad-api.nav.no/rest
 
 management:
   metrics:
