--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ no.nav:
               client-id: ${token.x.client.id}
               client-jwk: ${token.x.private.jwk}
               client-auth-method: private_key_jwt
-          safselvbetjening-q1:
+          safselvbetjening:
             well-known-url: ${token.x.well.known.url}
             grant-type: urn:ietf:params:oauth:grant-type:token-exchange
             token-exchange:
