--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -1,8 +1,7 @@
 name: Snyk vulnerabilities scanning of dependencies
-
 on:
   schedule:
-    - cron:  '0 0 * * *'
+    - cron: '0 0 * * 6'
   workflow_dispatch:
   push:
     branches:
@@ -15,5 +14,6 @@ jobs:
     name: Snyk
     uses: navikt/fp-gha-workflows/.github/workflows/snyk.yml@main
     with:
-      build-version: snyk-snapshot
+      build-version: latest
+      multi-module-maven-project: false
     secrets: inherit
