GA: Erstatter depreacted promote.yml I build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,13 +33,14 @@ jobs:
     secrets: inherit
 
   promote:
-    name: Deploy til dev-fss
+    name: Deploy til dev
     if: github.ref_name == 'master'
     needs: [ build-app, create-issue ]
-    uses: navikt/fp-gha-workflows/.github/workflows/promote.yml@main
+    uses: navikt/fp-gha-workflows/.github/workflows/deploy-app.yml@main
     with:
       issue-number: ${{ needs.create-issue.outputs.issue-number }}
-      cluster: dev-fss
+      environment: dev
+      platform: fss
     secrets: inherit
 
   snyk:
