Revert "Bumper avhengigheter for jakarta som inkludere spring 3 + tomcat (#1123)"
This reverts commit 9179f2dc102e64a5a18533fdad07f28625c7bc2c.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,6 +38,12 @@ historikk:
     group-id: fpinfo-historikk-tilbakekreving
 
 management:
+  metrics:
+    web:
+      server:
+        request:
+          autotime:
+            enabled: true
   endpoints:
     web:
       exposure:
